--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           python-version: '3.8'
           architecture: 'x64'
+      - name: Upgrade pip
+        run: pip install --upgrade pip
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Run Python
