--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -2,7 +2,7 @@ name: Sample
 
 on:
   push:
-    branches: 
+    branches:
       - main
   workflow_dispatch:
   schedule:
@@ -19,8 +19,9 @@ jobs:
           python-version: '3.8'
           architecture: 'x64'
       - name: Upgrade pip
-        run: pip install --upgrade pip
+        run: python -m pip install --upgrade pip
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          pip install -r actions_test/.github/workflows/requirements.txt
       - name: Run Python
         run: python sample.py
