--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -22,6 +22,6 @@ jobs:
         run: python -m pip install --upgrade pip
       - name: Install dependencies
         run: |
-          pip install -r actions_test/.github/workflows/requirements.txt
+          pip install -r ${{ github.workspace }}/.github/workflows/requirements.txt
       - name: Run Python
         run: python sample.py
