--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -11,16 +11,13 @@ destination_directory = os.path.join(source_directory, "copy")
 os.makedirs(destination_directory, exist_ok=True)
 
 # xml-filesフォルダ内のすべてのファイルを取得
-file_list = os.listdir(source_directory)
-
-# xmlファイルをコピーする
-for file_name in file_list:
-    if file_name.endswith(".xml"):
-        source_path = os.path.join(source_directory, file_name)
-        destination_path = os.path.join(destination_directory, file_name)
-        try:
-            shutil.copy2(source_path, destination_path)
-            print(f"コピー完了: {file_name}")
-        except Exception as e:
-            print(f"コピー失敗: {file_name}")
-            print(f"エラーメッセージ: {str(e)}")
+for root, dirs, files in os.walk(source_directory):
+    for file_name in files:
+        if file_name.endswith(".xml"):
+            source_path = os.path.join(root, file_name)
+            destination_path = os.path.join(destination_directory, file_name)
+            try:
+                shutil.copy2(source_path, destination_path)
+                print(f"コピー完了: {file_name}")
+            except Exception as e:
+                print
