--- a/.github/workflows/requirements.txt
+++ b/.github/workflows/requirements.txt
@@ -1,5 +1,6 @@
-numpy==1.19.5
-pandas==1.3.0
-matplotlib==3.4.2
 requests==2.26.0
 beautifulsoup4==4.9.3
+pandas==1.3.0
+numpy==1.19.5
+matplotlib==3.4.2
+dropbox==11.16.0
