--- a/.github/workflows/media_all.yml
+++ b/.github/workflows/media_all.yml
@@ -15,13 +15,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.x  # Pythonのバージョンを指定
+          python-version: 3.x
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # 必要な依存パッケージがあればrequirements.txtに追加
+          python -m pip install -r requirements.txt
 
       - name: Run Python script
         run: |
-          python media_all_dropbox.py  # 実行したいPythonスクリプトのファイル名に置き換える
+          python media_all_dropbox.py
