--- a/.github/workflows/requirements.txt
+++ b/.github/workflows/requirements.txt
@@ -4,3 +4,6 @@ pandas==1.3.0
 numpy==1.19.5
 matplotlib==3.4.2
 dropbox==11.16.0
+os-win==5.2.10; sys_platform == 'win32'
+subprocess32==3.5.4; python_version < '3.5'
+python-dropbox==11.1.0
