--- a/.github/workflows/media_all.yml
+++ b/.github/workflows/media_all.yml
@@ -21,6 +21,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
+          python -m pip install requests==2.26.0
+          python -m pip install beautifulsoup4==4.9.3
+          python -m pip install pandas==1.3.0
+          python -m pip install numpy==1.19.5
+          python -m pip install matplotlib==3.4.2
+          python -m pip install dropbox==11.16.0
 
       - name: Run Python script
         run: |
