--- a/.github/workflows/pickup_xml.yml
+++ b/.github/workflows/pickup_xml.yml
@@ -1,4 +1,4 @@
-name: Run Python pickup_xml Every 20 Minutes
+name: Run Python Script Every 20 Minutes
 
 on:
   schedule:
@@ -15,13 +15,19 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.x  # Pythonのバージョンを指定
+          python-version: 3.x  # Specify the Python version
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # 必要な依存パッケージがあればrequirements.txtに追加
+          python -m pip install -r requirements.txt
+          python -m pip install requests==2.26.0
+          python -m pip install beautifulsoup4==4.9.3
+          python -m pip install pandas==1.3.0
+          python -m pip install numpy==1.19.5
+          python -m pip install matplotlib==3.4.2
+          python -m pip install dropbox==11.16.0
 
       - name: Run Python script
         run: |
-          python pickup-xml-dropbox.py  # 実行したいPythonスクリプトのファイル名に置き換える
+          python pickup-xml-dropbox.py  # Replace with the filename of the Python script you want to execute
