--- a/.github/workflows/media_all.yml
+++ b/.github/workflows/media_all.yml
@@ -20,7 +20,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then python -m pip install -r requirements.txt; fi
+          python -m pip install requests==2.26.0
+          python -m pip install beautifulsoup4==4.9.3
+          python -m pip install pandas==1.3.0
+          python -m pip install numpy==1.19.5
+          python -m pip install matplotlib==3.4.2
+          python -m pip install dropbox==11.16.0
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Python script
         run: |
