--- a/.github/workflows/media_all.yml
+++ b/.github/workflows/media_all.yml
@@ -17,6 +17,11 @@ jobs:
         with:
           python-version: 3.x
 
+      - name: Install build dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
