--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -2,27 +2,25 @@ name: Scrape
 
 on:
   schedule:
-    - cron:  "*/20 * * * *"
+    - cron: "*/20 * * * *"
   workflow_dispatch:
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
-      with:
-        python-version: '3.9'
-    - run: pip install notebook requests bs4
-    - name: Run scraper
-      run:pickup-xml-dropbox.py
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+      - run: pip install notebook requests bs4
+      - name: Run scraper
+        run: python pickup-xml-dropbox.py
 
-    - name: Add and commit
-      id: add_commit
-      uses: EndBug/add-and-commit@v8
-      with:
-        committer_name: Automated
-        committer_email: actions@users.noreply.github.com
-        message: "Latest data"
-        
-   
+      - name: Add and commit
+        id: add_commit
+        uses: EndBug/add-and-commit@v8
+        with:
+          committer_name: Automated
+          committer_email: actions@users.noreply.github.com
+          message: "Latest data"
