--- a/.github/workflows/media_all.yml
+++ b/.github/workflows/media_all.yml
@@ -1,39 +1,26 @@
-name: Run Python media_all every day
+name:media all daily
 
 on:
   schedule:
-    - cron: "*/10 * * * *"
+    - cron: "*/20 * * * *"
+  workflow_dispatch:
 
 jobs:
-  run-python-script:
+  scrape:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
         with:
-          python-version: 3.x
+          python-version: '3.9'
+      - run: pip install notebook requests bs4 dropbox
+      - name: Run scraper
+        run: python pickup-xml-dropbox.py
 
-      - name: Install build dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install requests==2.26.0
-          python -m pip install beautifulsoup4==4.9.3
-          python -m pip install pandas==1.3.0
-          python -m pip install gcc python3-dev
-          python -m pip install numpy==1.22.0
-          python -m pip install matplotlib==3.4.2
-          python -m pip install dropbox==11.16.0
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-      - name: Run Python script
-        run: |
-          python media_all_dropbox.py
+      - name: Add and commit
+        id: add_commit
+        uses: EndBug/add-and-commit@v8
+        with:
+          committer_name: Automated
+          committer_email: actions@users.noreply.github.com
+          message: "Latest data"
