--- a/.github/workflows/pickupAll.yml
+++ b/.github/workflows/pickupAll.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.9'
-      - run: pip install notebook requests bs4 dropbox
+      - run: pip install notebook requests bs4 dropbox pandas
       - name: Run scraper
         run: python pickup-xml-dropbox.py
 
