--- a/.github/workflows/media_groupA.yml
+++ b/.github/workflows/media_groupA.yml
@@ -2,7 +2,7 @@ name: html-media_groupA
 
 on:
   schedule:
-    - cron: */20 * * * *"  # 月曜日、水曜日、金曜日の午前0時0分に実行
+    - cron: "*/10 * * * *" 
   workflow_dispatch:
 
 jobs:
