--- a/.github/workflows/mediaALL_01.yml
+++ b/.github/workflows/mediaALL_01.yml
@@ -1,4 +1,4 @@
-name: html-mediaALL
+name: html-mediaALL_01
 
 on:
   schedule:
@@ -15,7 +15,7 @@ jobs:
           python-version: '3.9'
       - run: pip install notebook requests bs4 dropbox pandas
       - name: Run scraper
-        run: python media_scraper_group_Ver.3.6.py
+        run: python media_scraper_group01_Ver.3.6.py
 
       - name: Add and commit
         id: add_commit
