--- a/.github/workflows/pickupAll.yml
+++ b/.github/workflows/pickupAll.yml
@@ -2,7 +2,7 @@ name: html-pickup
 
 on:
   schedule:
-    - cron: "0 0 * * 1,3,5"  # 月曜日、水曜日、金曜日の午前0時0分に実行
+    - cron: "0 */24 * * *"  
   workflow_dispatch:
 
 jobs:
