--- a/.github/workflows/mediaALL_01.yml
+++ b/.github/workflows/mediaALL_01.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.9.x'  # Replace 'x' with the latest patch version of Python 3.9
+          python-version: '3.9.x'  # 最新のPython 3.9のパッチバージョンを指定してください
 
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
@@ -29,8 +29,20 @@ jobs:
 
       - name: Add and commit
         id: add_commit
-        uses: EndBug/add-and-commit@v8
-        with:
-          committer_name: Automated
-          committer_email: actions@users.noreply.github.com
-          message: "Latest data"
+        run: |
+          git config user.name "Automated"
+          git config user.email "actions@users.noreply.github.com"
+          git add .
+          git commit -m "Latest data"
+          git show --format="%H" -s > "${{ github.workspace }}/commit_sha.txt"
+        shell: bash
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Pull changes
+        run: git pull origin main
+
+      - name: Push changes
+        run: git push origin main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
