--- a/.github/workflows/mediaALL_01.yml
+++ b/.github/workflows/mediaALL_01.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.9.x'  # 最新のPython 3.9のパッチバージョンを指定してください
+          python-version: '3.9.x'
 
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
@@ -23,26 +23,20 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install notebook requests bs4 dropbox pandas
-
+          
       - name: Run scraper
         run: python media_scraper_group01_Ver.3.6.py
 
       - name: Add and commit
         id: add_commit
-        run: |
-          git config user.name "Automated"
-          git config user.email "actions@users.noreply.github.com"
-          git add .
-          git commit -m "Latest data"
-          git show --format="%H" -s > "${{ github.workspace }}/commit_sha.txt"
-        shell: bash
-        env:
-          GITHUB_TOKEN: ${{ GITHUBY }}
+        uses: EndBug/add-and-commit@v8
+        with:
+          committer_name: Automated
+          committer_email: actions@users.noreply.github.com
+          message: "Latest data"
 
       - name: Pull changes
         run: git pull origin main
 
       - name: Push changes
         run: git push origin main
-        env:
-          GITHUB_TOKEN: ${{ GITHUBY }}
