--- a/.github/workflows/mediaALL_01.yml
+++ b/.github/workflows/mediaALL_01.yml
@@ -23,9 +23,6 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install notebook requests bs4 dropbox pandas
-          
-      - name: Run scraper
-        run: python media_scraper_group01_Ver.3.6.py
 
       - name: Add and commit
         id: add_commit
@@ -35,8 +32,11 @@ jobs:
           committer_email: actions@users.noreply.github.com
           message: "Latest data"
 
+      - name: Run scraper
+        run: python media_scraper_group01_Ver.3.6.py
+
       - name: Pull changes
-        run: git pull origin main
+        run: git pull origin ${{ github.ref }}
 
       - name: Push changes
-        run: git push origin main
+        run: git push origin ${{ github.ref }}
