Update and rename pickupAll.yml to html-pickupAll.yml

--- a/.github/workflows/html-pickupAll.yml
+++ b/.github/workflows/html-pickupAll.yml
@@ -1,8 +1,8 @@
-name: html-pickup
+name: html-pickupALL
 
 on:
   schedule:
-    - cron: "0 */8 * * *"  
+    - cron: "0 */24 * * *"  
   workflow_dispatch:
 
 jobs:
