--- a/.github/workflows/mediaALL_03.yml
+++ b/.github/workflows/mediaALL_03.yml
@@ -6,24 +6,14 @@ on:
   workflow_dispatch:
 
 jobs:
-  run_scraper:
+  scrape:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
         with:
-          python-version: '3.9.x'
-
-      - name: Upgrade pip
-        run: python -m pip install --upgrade pip
-
-      - name: Install dependencies
-        run: |
-          python -m pip install notebook requests bs4 dropbox pandas
-
+          python-version: '3.9'
+      - run: pip install notebook requests bs4 dropbox pandas
       - name: Run scraper
         run: python media_scraper_group03_Ver.3.6.py
 
@@ -34,10 +24,3 @@ jobs:
           committer_name: Automated
           committer_email: actions@users.noreply.github.com
           message: "Latest data"
-
-
-      - name: Pull changes
-        run: git pull origin ${{ github.ref }}
-
-      - name: Push changes
-        run: git push origin ${{ github.ref }}
