--- a/.github/workflows/mediaALL_03.yml
+++ b/.github/workflows/mediaALL_03.yml
@@ -13,7 +13,8 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.9'
-      - run: pip install notebook requests bs4 dropbox pandas
+      - name: Install required libraries
+        run: pip install notebook requests bs4 dropbox pandas
       - name: Run scraper
         run: python media_scraper_group03_Ver.3.6.py
 
