--- a/.github/workflows/html-pickupALL02.yml
+++ b/.github/workflows/html-pickupALL02.yml
@@ -28,8 +28,8 @@ jobs:
 
       - name: Add and commit
         id: add_commit
-        uses: EndBug/add-and-commit@v8
-        with:
-          committer_name: Automated
-          committer_email: actions@users.noreply.github.com
-          message: "Latest data"
+        run: |
+          git config --global user.name "Automated"
+          git config --global user.email "actions@users.noreply.github.com"
+          git add .
+          git commit -m "Latest data"
