--- a/.github/workflows/html-pickupALL02.yml
+++ b/.github/workflows/html-pickupALL02.yml
@@ -42,10 +42,7 @@ jobs:
           git commit -m "Latest data"
 
       - name: Archive files
-        run: tar czvf html-pickup_${TODAY}.tar.gz html-pickup_${TODAY}
-
-      - name: Copy artifact file
-        run: cp html-pickup_${TODAY}.tar.gz $GITHUB_WORKSPACE/html-pickup_${TODAY}.tar.gz
+        run: tar czvf $GITHUB_WORKSPACE/html-pickup_${TODAY}.tar.gz html-pickup_${TODAY}
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
