--- a/.github/workflows/html-pickupALL02.yml
+++ b/.github/workflows/html-pickupALL02.yml
@@ -42,10 +42,10 @@ jobs:
           git commit -m "Latest data"
 
       - name: Archive files
-        run: tar czvf $GITHUB_WORKSPACE/html-pickup_${TODAY}.tar.gz html-pickup_${TODAY}
+        run: tar czvf html-pickup_${TODAY}.tar.gz html-pickup_${TODAY}
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
           name: html_pickup_${TODAY}
-          path: $GITHUB_WORKSPACE/html-pickup_${TODAY}.tar.gz
+          path: html-pickup_${TODAY}.tar.gz
