--- a/.github/workflows/html-pickupALL02.yml
+++ b/.github/workflows/html-pickupALL02.yml
@@ -24,14 +24,14 @@ jobs:
         run: |
           today=$(date +'%Y%m%d_%H%M')
           month=$(date +'%Y%m')
-          mkdir -p "html-pickup_${month}"
+          mkdir -p "html-pickup_${today}"
           python topics_scraper_all_Ver.5.1.py
 
       - name: Archive new files
         run: |
           today=$(date +'%Y%m%d_%H%M')
           month=$(date +'%Y%m')
-          mv ./html-pickup_${today}/*.csv "html-pickup_${month}"
+          mv ./html-pickup_${month}/*.csv "html-pickup_${month}"
 
       - name: Create artifact
         uses: actions/upload-artifact@v2
