--- a/.github/workflows/html-pickupALL02.yml
+++ b/.github/workflows/html-pickupALL02.yml
@@ -29,4 +29,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: html_pickup_artifacts
-          path: html-pickup_${month}
+          path: html-pickup_${month}/*.csv
