--- a/.github/workflows/html-pickupALL02.yml
+++ b/.github/workflows/html-pickupALL02.yml
@@ -24,9 +24,12 @@ jobs:
       - name: Run scraper
         run: python topics_scraper_all_Ver.5.1.py
 
-      # CSVファイルをアーティファクトとしてアップロード
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: html_pickup_artifacts
-          path: html-pickup_${month}/*.csv
+      # CSVファイルをコミットしてプッシュ
+      - name: Commit and push CSV files
+        run: |
+          month=$(date +'%Y%m')
+          git config user.name "Automated"
+          git config user.email "actions@users.noreply.github.com"
+          git add html-pickup_${month}/
+          git commit -m "Update csv files"
+          git push
