--- a/.github/workflows/html-mediaALL01.yml
+++ b/.github/workflows/html-mediaALL01.yml
@@ -18,10 +18,12 @@ jobs:
       - name: Run scraper
         run: python media_scraper_group01_Ver.3.6.py
 
+      # CSVファイルをコミットしてプッシュ
       - name: Add and commit
-        id: add_commit
-        uses: EndBug/add-and-commit@v8
-        with:
-          committer_name: Automated
-          committer_email: actions@users.noreply.github.com
-          message: "Latest data"
+        run: |
+          week=$(date +'%Y%m_%W')
+          git config user.name "Automated"
+          git config user.email "actions@users.noreply.github.com"
+          git add html_mediaALL_${week}/
+          git commit -m "Latest data"
+          git push
