--- a/.github/workflows/html-pickupALL.yml
+++ b/.github/workflows/html-pickupALL.yml
@@ -2,7 +2,7 @@ name: html-pickupALL
 
 on:
   schedule:
-    - cron: "0 */1 * * *"  # 毎日実行（24時間ごとに）
+    - cron: "0 0 * * *"  # 毎日実行（24時間ごとに）
   workflow_dispatch:
 
 jobs:
@@ -23,12 +23,10 @@ jobs:
       - name: Install Python dependencies
         run: |
           pip install notebook requests bs4 dropbox pandas
-
       - name: Create directory for artifacts
         run: |
           month=$(date +'%Y%m')
           mkdir -p "html-pickup_${month}"
-
       - name: Run scraper
         run: python topics_scraper_all_Ver.5.1.py
 
@@ -38,5 +36,5 @@ jobs:
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
           git add html-pickup_${month}/
-          git commit -m "Update csv files"
+          git commit -m "Update csv files - $(date +'%Y-%m-%d')"
           git push
