--- a/.github/workflows/html-pickupALL.yml
+++ b/.github/workflows/html-pickupALL.yml
@@ -37,4 +37,5 @@ jobs:
           git config user.email "actions@users.noreply.github.com"
           git add html-pickup_${month}/
           git commit -m "Update csv files - $(date +'%Y-%m-%d')"
+          git pull origin main
           git push
