--- a/.github/workflows/html-mediaALL_b.yml
+++ b/.github/workflows/html-mediaALL_b.yml
@@ -26,4 +26,6 @@ jobs:
           git config user.email "actions@users.noreply.github.com"
           git add html_mediaALL_${week}/
           git commit -m "Latest data"
+          set -e  # エラーチェックを追加
+          git pull origin main --ff-only  # プル時に競合を避ける
           git push
