--- a/.github/workflows/html-pickupALL.yml
+++ b/.github/workflows/html-pickupALL.yml
@@ -37,5 +37,6 @@ jobs:
           git config user.email "actions@users.noreply.github.com"
           git add html-pickup_${month}/
           git commit -m "Update csv files - $(date +'%Y-%m-%d')"
-          git pull origin main
+          set -e  # エラーチェックを追加
+          git pull origin main --ff-only  # プル時に競合を避ける
           git push
