--- a/.github/workflows/html-pickupALL.yml
+++ b/.github/workflows/html-pickupALL.yml
@@ -2,7 +2,7 @@ name: html-pickupALL
 
 on:
   schedule:
-  　- cron: "0 */1 * * *"  # 8時間ごとに実行
+    - cron: "0 */8 * * *"  # 8時間ごとに実行
   workflow_dispatch:
 
 jobs:
@@ -37,6 +37,7 @@ jobs:
           git config user.email "actions@users.noreply.github.com"
           git add html-pickup_${month}/
           git commit -m "Update csv files - $(date +'%Y-%m-%d')"
-          set -e  # エラーチェックを追加
-          git pull origin main --ff-only  # プル時に競合を避ける
+          set -e  # Add error checking
+          git fetch origin
+          git pull origin main --ff-only  # Avoid conflicts when pulling
           git push
