--- a/.github/workflows/html-mediaALL_b.yml
+++ b/.github/workflows/html-mediaALL_b.yml
@@ -2,7 +2,7 @@ name: html-mediaALL_b
 
 on:
   schedule:
-    - cron: "0 */24 * * *"
+    - cron: "0 3 * * 1,4"　#every Monday and Thursday at 3 AM
   workflow_dispatch:
 
 jobs:
