--- a/.github/workflows/html-mediaALL_b.yml
+++ b/.github/workflows/html-mediaALL_b.yml
@@ -2,7 +2,7 @@ name: html-mediaALL_b
 
 on:
   schedule:
-    - cron: "0 3 * * 1,4"　#every Monday and Thursday at 3 AM
+    - cron: "0 4 * * 1,4"　#every Monday and Thursday at 4 AM
   workflow_dispatch:
 
 jobs:
@@ -29,7 +29,7 @@ jobs:
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
           git add html_mediaALL_${week}/
-          git commit -m "Latest data - $(date +'%Y-%m-%d %H:%M:%S')"
+          git commit -m "Latest data_b - $(date +'%Y-%m-%d %H:%M:%S')"
           git fetch origin
           git pull origin main --ff-only  # Avoid conflicts when pulling
           git push
