--- a/.github/workflows/html-mediaALL_a.yml
+++ b/.github/workflows/html-mediaALL_a.yml
@@ -25,7 +25,7 @@ jobs:
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
           git add html_mediaALL_${week}/
-          git commit -m "Latest data"
+          git commit -m "Latest data_a - $(date +'%Y-%m-%d %H:%M:%S')"
           set -e  # エラーチェックを追加
           git pull origin main --ff-only  # プル時に競合を避ける
           git push
