--- a/.github/workflows/html-mediaALL_f.yml
+++ b/.github/workflows/html-mediaALL_f.yml
@@ -29,7 +29,7 @@ jobs:
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
           git add html_mediaALL_${week}/
-          git commit -m "Latest data - $(date +'%Y-%m-%d %H:%M:%S')"
+          git commit -m "Latest data_f - $(date +'%Y-%m-%d %H:%M:%S')"
           git fetch origin
           git pull origin main --ff-only  # Avoid conflicts when pulling
           git push
