--- a/.github/workflows/html-mediaALL_a.yml
+++ b/.github/workflows/html-mediaALL_a.yml
@@ -24,7 +24,8 @@ jobs:
           week=$(date +'%Y%m_%W')
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
-          git add html_mediaALL_${week}/
+          mkdir -p html_mediaALL_a_${week}/
+          git add html_mediaALL_a_${week}/
           git commit -m "Latest data_a - $(date +'%Y-%m-%d %H:%M:%S')"
           set -e  # エラーチェックを追加
           git pull origin main --ff-only  # プル時に競合を避ける
