--- a/.github/workflows/html-mediaALL_b.yml
+++ b/.github/workflows/html-mediaALL_b.yml
@@ -28,7 +28,8 @@ jobs:
           week=$(date +'%Y%m_%W')
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
-          git add html_mediaALL_${week}/
+          mkdir -p html_mediaALL_b_${month}/
+          git add html_mediaALL_b_${week}/
           git commit -m "Latest data_b - $(date +'%Y-%m-%d %H:%M:%S')"
           git fetch origin
           git pull origin main --ff-only  # Avoid conflicts when pulling
