--- a/.github/workflows/html-mediaALL_a.yml
+++ b/.github/workflows/html-mediaALL_a.yml
@@ -21,11 +21,11 @@ jobs:
       # CSVファイルをコミットしてプッシュ
       - name: Add and commit
         run: |
-          week=$(date +'%Y%m_%W')
+          month=$(date +'%Y%m')
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
-          mkdir -p html_mediaALL_a_${week}/
-          git add html_mediaALL_a_${week}/
+          mkdir -p html_mediaALL_a_${month}/
+          git add html_mediaALL_a_${month}/
           git commit -m "Latest data_a - $(date +'%Y-%m-%d %H:%M:%S')"
           set -e  # エラーチェックを追加
           git pull origin main --ff-only  # プル時に競合を避ける
