--- a/.github/workflows/html-mediaALL_d.yml
+++ b/.github/workflows/html-mediaALL_d.yml
@@ -21,14 +21,15 @@ jobs:
         run: pip install notebook requests bs4 dropbox pandas
 
       - name: Run scraper
-        run: python media_scraper_group_b_Ver.3.6.py
+        run: python media_scraper_group_d_Ver.3.6.py
 
       - name: Add and commit changes
         run: |
-          week=$(date +'%Y%m_%W')
+          month=$(date +'%Y%m')
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
-          git add html_mediaALL_${week}/
+          mkdir -p html_mediaALL_d_${month}/
+          git add html_mediaALL_d_${month}/
           git commit -m "Latest data_d - $(date +'%Y-%m-%d %H:%M:%S')"
           git fetch origin
           git pull origin main --ff-only  # Avoid conflicts when pulling
