--- a/.github/workflows/html-mediaALL_c.yml
+++ b/.github/workflows/html-mediaALL_c.yml
@@ -2,7 +2,7 @@ name: html-mediaALL_c
 
 on:
   schedule:
-    - cron: "0 3 * * 3"　every Wednesday at 3 AM
+    - cron: "0 3 * * 3" # every Wednesday at 3 AM
   workflow_dispatch:
 
 jobs:
