--- a/.github/workflows/html-pickupALL.yml
+++ b/.github/workflows/html-pickupALL.yml
@@ -22,7 +22,8 @@ jobs:
 
       - name: Install Python dependencies
         run: |
-          pip install notebook requests bs4 dropbox pandas
+          pip install notebook requests bs4 pandas
+          
       - name: Create directory for artifacts
         run: |
           month=$(date +'%Y%m')
@@ -35,10 +36,10 @@ jobs:
           month=$(date +'%Y%m')
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
-          mkdir -p html-pickup_${month}/
           git add html-pickup_${month}/
           git commit -m "Update csv files - $(date +'%Y-%m-%d')"
           set -e  # Add error checking
+          git merge --no-ff
           git fetch origin
           git pull origin main --ff-only  # Avoid conflicts when pulling
           git push
