--- a/.github/workflows/html-mediaALL_b.yml
+++ b/.github/workflows/html-mediaALL_b.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           month=$(date +'%Y%m')
           week=$(date +'%Y%m_%W')
-          mkdir -p "html-pickup_${month}"
+          mkdir -p "html-mediaALL_b_${month}"
 
       - name: Run scraper
         run: python media_scraper_group_b_Ver.3.6.py
