--- a/.github/workflows/html-mediaALL_a.yml
+++ b/.github/workflows/html-mediaALL_a.yml
@@ -13,19 +13,24 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.9'
+      - name: Create directory
+        run: |
+          current_month=$(date +'%Y%m')
+          current_week=$(date +'%Y_%W') # 1-51
+          day_offset=$(( 7 - current_day_of_week ))
+          current_time=$(date +'%Y%m%d_%H%M')
+          folder_name="html-mediaALL_a_${current_week}"
+          mkdir -p $folder_name    
+      
       - name: Install required libraries
         run: pip install notebook requests bs4 dropbox pandas
       - name: Run scraper
         run: python media_scraper_group_a_Ver.3.6.py
 
       # CSVファイルをコミットしてプッシュ
-      - name: Add and commit
+      - name: Commit and push csv files
         run: |
-          month=$(date +'%Y%m')
-          git config user.name "Automated"
-          git config user.email "actions@users.noreply.github.com"
-          mkdir -p html-mediaALL_a_${month}/
-          git add html-mediaALL_a_${month}/
-          git commit -m "Latest data_a - $(date +'%Y-%m-%d %H:%M:%S')"
-          git pull origin main --ff-only  # プル時に競合を避ける
+          git add .
+          git commit -m "Update csv files"
           git push
+        working-directory: ${{ github.workspace }} 
