--- a/.github/workflows/html-mediaALL_b.yml
+++ b/.github/workflows/html-mediaALL_b.yml
@@ -28,16 +28,16 @@ jobs:
 
       - name: Run scraper
         run: python media_scraper_group_b_Ver.3.6.py
-
-      - name: Add and commit changes
+      
+      - name: Set Git Config
         run: |
-          month=$(date +'%Y%m')
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
-          # Optionally, copy files into the newly created directory (if needed)
-          # cp path/to/source_files/* html_mediaALL_b_${month}/
-          git add html-mediaALL_b_${month}/
-          git commit -m "Latest data_b - $(date +'%Y-%m-%d %H:%M:%S')"
-          git fetch origin
-          git pull origin main --ff-only  # Avoid conflicts when pulling
+        working-directory: ${{ github.workspace }}
+        
+      - name: Commit and push XML files
+        run: |
+          git add .
+          git commit -m "Update csv files"
           git push
+        working-directory: ${{ github.workspace }}
