--- a/.github/workflows/html-mediaALL_a.yml
+++ b/.github/workflows/html-mediaALL_a.yml
@@ -20,17 +20,22 @@ jobs:
           day_offset=$(( 7 - current_day_of_week ))
           current_time=$(date +'%Y%m%d_%H%M')
           folder_name="html-mediaALL_a_${current_week}"
-          mkdir -p $folder_name    
+          mkdir -p $folder_name
       
       - name: Install required libraries
         run: pip install notebook requests bs4 dropbox pandas
       - name: Run scraper
         run: python media_scraper_group_a_Ver.3.6.py
-        
+
       - name: Set Git Config
         run: |
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
+        working-directory: ${{ github.workspace }}
+
+      # リモートリポジトリの変更を取り込む
+      - name: Pull remote changes
+        run: git pull origin main
         working-directory: ${{ github.workspace }}
 
       # CSVファイルをコミットしてプッシュ
@@ -39,4 +44,4 @@ jobs:
           git add .
           git commit -m "Update csv files"
           git push
-        working-directory: ${{ github.workspace }} 
+        working-directory: ${{ github.workspace }}
